# J1939

./: CLAUDE.md  Cargo.toml  README.md
examples/: j1939decode.rs
src/: diagnostic.rs  lib.rs  name.rs  pgn.rs  protocol.rs  sa.rs  slots.rs  spn.rs  transport.rs
tests/: dump_roundtrip.rs
